apps/connectivity/adguard/templates/adguard-route-require-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: adguard-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: adguard
  oidc:
    provider:
      issuer: https://authentik.mobrockers.com/application/o/adguard/
    redirectURL: https://adguard.mobrockers.com/oauth2/callback
    logoutPath: /oauth2/logout
    clientID: 6b5YFbympoX3zxajjSvcW6sG0VSI971DjRKGbMRj
    clientSecret: 
      name: adguard-oidc-secret
